# kaggle-otto2

./: .gitignore  README.md  demo.ipynb  pyproject.toml
exp/: exp001.ipynb
kaggle_otto2/cand_generator/: __init__.py
kaggle_otto2/cand_generator/base/: cand_generator_base.py
kaggle_otto2/cand_generator/item2vec/: cand_generator.py  main.py  trainer.py
kaggle_otto2/cand_generator/item_cf/: cand_generator.py  main.py
kaggle_otto2/cand_generator/item_mf/: cand_generator.py  dataset.py  enums.py  loss.py  main.py  model.py  trainer.py
kaggle_otto2/cand_generator/last_inter/: main.py  (+1 more)
kaggle_otto2/cand_merger/: __init__.py  cand_merger.py  main.py  neg_sampler.py
kaggle_otto2/config/: __init__.py  config.py  dir_config.py  enums.py
kaggle_otto2/data_loader/: __init__.py  main.py  otto_data_loader.py
kaggle_otto2/feature/: __init__.py  feature_base.py  feature_merger.py  item_inter_num.py  item_inter_rank.py  item_inter_ts_stats.py  item_multi_inter_prob.py  item_type_to_type_prob.py  main.py  user_inter_dow.py  user_inter_num.py  user_inter_ts_diff.py  user_inter_ts_hour.py  user_inter_ts_stats.py  user_item_first_inter_rank.py  user_item_is_first_inter.py  user_ts_diff.py
kaggle_otto2/ranker/: enums.py  ranker_trainer.py
kaggle_otto2/ranker_inference/: __init__.py  main.py  ranker_inference.py
kaggle_otto2/ranker_trainer/: __init__.py  enums.py  main.py  ranker_trainer.py
kaggle_otto2/util/: __init__.py  cv_util.py  evaluate_util.py  file_util.py  global_util.py  plot_util.py  search_util.py  time_util.py
yaml/: exp001_dev.yaml  exp001_lb.yaml
(+5 files in other folders)
