[tool.poetry]
name = "kaggle-otto2"
version = "0.1.0"
description = ""
authors = ["kiccho1101"]
readme = "README.md"
packages = [{include = "kaggle_otto2"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"
kaggle = "^1.5.12"
numpy = "^1.23.4"
scipy = "^1.9.3"
torch = "1.12.1"
wandb = "^0.13.4"
cloudpickle = "^2.2.0"
loguru = "^0.6.0"
tqdm = "^4.64.1"
pyarrow = "^10.0.0"
fastparquet = "^0.8.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"
gensim = "^4.2.0"
multiprocess = "^0.70.14"
swifter = "^1.3.4"
transformers = "^4.24.0"
click = "^8.1.3"
faiss-cpu = "^1.7.2"
numba = "^0.56.4"
lightgbm = "^3.3.3"
polars = "^0.16.2"
omegaconf = "^2.3.0"
hydra-core = "^1.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
